tests/Checker/everything/errors/17a.vc
int main() {
    int a[3] = {1, 2, 3};
    a[1.0];

    return 1;
}
